# gemini-media-mcp

./: .env.example  .gitignore  README.MD  config.py  pyproject.toml  requirements.txt  server.py
.clinerules/: libs_info.md
.clinerules/workflows/: commit_message.md  github_issues.md
config/: mcp_config.py
docs/en/: client_examples.md  common-issues.md  configuration.md  installation.md  logging.md  quick-start.md  troubleshooting.md  usage.md
docs/examples/: audio_script_example.yaml
docs/gem/: audio.md  file_api.md  free_rate_limit.md  g-map.md  g-search.md  image_create.md  image_understainding.md  speech_gen.md  structured.md  text.md  video.md  voices.md
docs/ideas/: async-concurrency-mcp-gemini.md  gif-animation-processing.md  upd_doc_mcp_client_guide.md  video-frames-audio-processing.md
docs/ru/: client_examples.md  common-issues.md  configuration.md  installation.md  logging.md  mcp-tools-guide.md  quick-start.md  troubleshooting.md  usage.md  video-analysis.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
models/: __init__.py  analysis.py
modules/: __init__.py  image_analysis.py
scripts/: install_server.py
tests/: test_gemini_analyzer.py
tools/: __init__.py  audio_analyzer.py  audio_generator.py  gif_analyzer.py  image_analyzer.py  image_generator.py  video_analyzer.py
utils/: __init__.py  audio_extractor.py  file_utils.py  gemini_client.py  gif_processor.py  image_tokens.py  logger.py  media_frame_extractor.py
